# LibCompetitive

./: .gitignore  Doxyfile  README.md
common/: header.h
geometry/: circle.h  common.h  convex.h  crossing_points.h  crosspoint.cpp  debug.h  distance.cpp  distance.h  geometry.cpp  geometry.h  intersect.cpp  intersect.h  line.h  point.h  polygon.h  segment.h
graph/: bipartite_matching.cpp  edge.h  enumerate_maximal_independent_sets.cpp  graph.h  heavy_light_decomposition.cpp  heavy_light_decomposition.h  lowest_common_ancestor.h  maximum_flow_dinic.h  minimum_cost_flow_primal_dual.h  separator_decomposition.h  strongly_connected_components.cpp  strongly_connected_components.h  topological_sort.h  tree_diameter.h
libloader/: libloader.py
math/: eratosthenes.cpp  eratosthenes.h  fft.h  linear_equation_lu.h  math.h  matrix.cpp  matrix.h  mod_inverse.cpp  mod_inverse.h  ranged_eratosthenes.h  rational.cpp  rational.h  static_matrix.cpp  sweep_out.h
misc/: alpha_beta.h  binary_search_integer.h  binary_search_real.h  coordinates_compression.cpp  dice20.cpp  huffman_coding.cpp  misc.h  sliding_minimum_query.h  ternary_search.h  three_sat_pruning.h  xorshift.cpp
string/: aho-corasick.cpp  aho_corasick.h  string.h  (+3 more)
test/: CMakeLists.txt
test/unittest/math/: .mod_inverse.cpp.swp  mod_inverse.cpp
test/unittest/misc/: binary_search.cpp  coordinates_compression.cpp
test/unittest/string/: longest_common_prefix.cpp  suffix_array.cpp
test/unittest/structure/: binary_indexed_tree.cpp  segment_tree.cpp
test/utility/: main.cpp  random.cpp  random.h  stopwatch.h
(+64 files in other folders)
